--- a/DockerHelloSample/wwwroot/HelloDocker.html
+++ b/DockerHelloSample/wwwroot/HelloDocker.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Hello Docker</title>
 </head>
 <body>
     Hello Docker world.
